Prevent text from wrapping under icon in menu.

--- a/packages/design-system/src/styles/components/_Dropdown.scss
+++ b/packages/design-system/src/styles/components/_Dropdown.scss
@@ -106,6 +106,7 @@
 .ds-c-dropdown__item--selected {
   background-color: var(--color-primary);
   color: var(--color-white);
+  display: flex; // Prevents text from wrapping under icon
   font-weight: var(--font-weight-bold);
 }
 
